fixed offer banner on smaller screens

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -27,7 +27,7 @@
   background-image: url("../images/seamless.jpg");
   background-size: 200px 200px;
   background-repeat: repeat;
-  height: 150px;
+
   width: 100%;
 }
 .offer .container {
